# SmartHRdemo

./: SMART_HR_REPRODUCTION_GUIDE.md  TODO.md  docker-compose.yml  init_db.py  pyproject.toml
F%3A/develop/agent/SmartHRdemo/backend/: __init__.py
backend/app/: database.py  main.py  schemas.py
backend/app/api/: graph.py  interview.py  match.py  positions.py  resumes.py
backend/app/services/: document_parser.py  embedding_service.py  hybrid_match.py  interview_service.py  milvus_client.py  neo4j_client.py  skill_extractor.py
docker/neo4j/: init-skills-extended.cypher  init.cypher  init_clean.cypher  init_fixed.cypher  init_no_stats.cypher  init_skills_clean.cypher  init_skills_no_stats.cypher
front/: index.html  package-lock.json
front/src/: App.tsx
front/src/pages/: GraphPage.tsx  InterviewPage.tsx  MatchPage.tsx  PositionsPage.tsx  ResumesPage.tsx
test/: test.py  test2.py
