[project]
name = "smarthrdemo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "dashscope>=1.25.21",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "neo4j>=6.2.0",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "pymilvus>=3.0.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "unstructured-inference>=1.6.11",
    "unstructured[docx,local-inference,pdf]>=0.22.31",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
